--- a/scss/utility.scss
+++ b/scss/utility.scss
@@ -231,6 +231,7 @@ h2 {
     position: absolute;
     top : 4em;
     left : 8.3em;
+    overflow-x: hidden;
 
     li {
         margin-bottom: .5em;
